--- a/src/main/java/comn/TODO
+++ b/src/main/java/comn/TODO
@@ -1,16 +1,16 @@
 
 
-Agenda: - more MVC ! (decent model for engcoach)
+Agenda: - refactor TranscriptionService
 
 TODO:
+- convert transcription into jsons
 - implement EngCoach2Controller
 - add logger to EngCoach2Controller
 - decoupling
-- more domain objects like (Word, Sentence)
 - add database (MongoDB or SQLite)
 - add feature for playing pronunciation of words via third-party services
 - app for android
-- Expand the check array -> save words not only from one train but from lets say 5.
+- Expand the check array -> save words not only from one train but from lets say 5 trains.
 
 
 Done:
