schema that explaining interaction with dics, MainPageController, other minor stuff

--- a/src/main/java/comn/TODO
+++ b/src/main/java/comn/TODO
@@ -1,22 +1,26 @@
 
 
-Agenda: - draw a schema that explains interaction of dictionaries
+Agenda: - implement MainPageController
 
 TODO:
-- create frame for engcoach2model with javafx
-- implement EngCoach2Controller
+- resize width of window to fit long sentences in the fields
 - add logger to EngCoach2Controller
+- consider Google Guice as DI tool
 - implement transcription for phrases
 - implement transcription for sentences
-- engcoach2model.getRandomRecord() вынести фильтры!
+
 - what will happen with dictionaryRecord's ids what i add a new sentence
 to one of the categories ??? Maybe we do not need them (ids) ?
 - add feature for playing pronunciation of words via third-party services
 - app for android
-- add database (MongoDB or SQLite)
+- add database - SQLite
 
 
 Done:
+- create frame for engcoach2model with javafx
+- NPE due to empty filteredRecsList handled
+- engcoach2model.getRandomRecord() вынести фильтры!
+- draw a schema that explains interaction of dictionaries
 - refactor TranscriptionService
 - convert transcription into jsons
 - Expand the check array -> save words not only
